--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -252,7 +252,7 @@
                                 <img src="~/img/Img_Web2/icono-credito.png" />
                                 <p>Crédito</p>
                             </a>
-                            <a class="tartjeta__servicios animacion_arriba">
+                            <a href="~/FormatosAC/Index" class="tartjeta__servicios animacion_arriba">
                                 <img src="~/img/Img_Web2/iconos/quiero-ser-socio.png" />
                                 <p>Quiero ser socio</p>
                             </a>
@@ -291,7 +291,7 @@
                         <p>Si es socio de nuestra cooperativa disfrute de múltiples beneficios</p>
                     </section>
                     <div class="icons container_prin">
-                        <div class="tarjetas-Centradas underline2">
+                        <a href="~/Home/ConveniosC" class="tarjetas-Centradas underline2">
                             <div class="icentrado">
                                 <img src="~/img/Img_Web2/iconos/convenios-y-promociones.png" />
                             </div>
@@ -300,7 +300,7 @@
                     Ubica tu sucursal más cercana y conoce las promociones y convenios vigentes en cada una de ellas.
                     * Los convenios y promociones pueden estar sujetos a cambios<br />
                 </p>*@
-                        </div>
+                        </a>
                         <div class="tarjetas-Centradas underline2">
                             <div class="icentrado"><img src="~/img/Img_Web2/icono-seguro.png" /></div>
                             <p>Protección al ahorro</p>
