--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -238,6 +238,11 @@ i {
 .container_prin {
   max-width: 1200px;
   margin: 0 auto 30px; }
+  .container_prin a {
+    text-decoration: none; }
+    .container_prin a:hover, .container_prin a:focus {
+      text-decoration: none;
+      color: black; }
 
 .contenedor {
   display: flex;
@@ -1122,8 +1127,10 @@ i {
 
 /*$primary-color: rgba(224, 85, 20, 0.75);*/
 /*$primary-color: rgba(252,187,43,1);*/
-.contenido .container__nuestras_Agencias {
-  margin: 0; }
+.contenido {
+  margin: 20px 0 0 0; }
+  .contenido .container__nuestras_Agencias {
+    margin: 0; }
 
 .controles_Agencia {
   display: flex;
@@ -1635,6 +1642,21 @@ i {
 .text-justify {
   font-size: 18px; }
 
+.quien_container_contenido {
+  display: flex;
+  flex-direction: row;
+  /*flex-wrap: wrap;*/
+  justify-content: center;
+  align-items: center;
+  gap: 30px; }
+  .quien_container_contenido img {
+    width: 100%;
+    height: 400px;
+    object-fit: contain; }
+  @media (max-width: 1000px) {
+    .quien_container_contenido {
+      flex-direction: column; } }
+
 /*$primary-color: rgba(224, 85, 20, 0.75);*/
 /*$primary-color: rgba(252,187,43,1);*/
 /*.item-quienessomos, .item-quienessomos a {
@@ -1648,31 +1670,28 @@ i {
   align-items: center;
   gap: 20px;
   margin: 20px auto; }
+  .conceptos_container a {
+    text-decoration: none; }
+    .conceptos_container a:hover, .conceptos_container a:focus {
+      text-decoration: none; }
   .conceptos_container .item-conceptosinteres {
     padding: 20px;
-    transition: all .2s; }
-    .conceptos_container .item-conceptosinteres a {
-      /*background: #E1852C;*/
-      text-decoration: none;
-      color: black;
-      font-weight: 400;
-      font-size: 19px; }
+    transition: all .2s;
+    text-decoration: none;
+    color: black;
+    font-weight: 400;
+    font-size: 19px; }
     .conceptos_container .item-conceptosinteres:hover, .conceptos_container .item-conceptosinteres:focus {
       background: rgba(236, 28, 36, 0.75);
       /*border:1px solid red;*/
       transform: translateY(-4px);
-      box-shadow: 0 0.5em 0.5em -0.4em rgba(236, 28, 36, 0.75); }
-      .conceptos_container .item-conceptosinteres:hover a, .conceptos_container .item-conceptosinteres:focus a {
-        color: white; }
+      box-shadow: 0 0.5em 0.5em -0.4em rgba(236, 28, 36, 0.75);
+      color: #fff; }
     .conceptos_container .item-conceptosinteres.active {
+      background: rgba(236, 28, 36, 0.75);
       font-weight: 500;
-      font-weight: 500; }
-      .conceptos_container .item-conceptosinteres.active a {
-        color: rgba(252, 132, 4, 0.9); }
-      .conceptos_container .item-conceptosinteres.active:hover, .conceptos_container .item-conceptosinteres.active:focus {
-        /*border:1px solid red;*/ }
-        .conceptos_container .item-conceptosinteres.active:hover a, .conceptos_container .item-conceptosinteres.active:focus a {
-          color: white; }
+      box-shadow: 0 0.5em 0.5em -0.4em rgba(236, 28, 36, 0.75);
+      color: #fff; }
   .conceptos_container .text-justify {
     font-size: 18px; }
 
