--- a/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
@@ -7,6 +7,7 @@ $secondary-color: rgba(236, 28, 36, 0.75);
     .container__nuestras_Agencias{
         margin : 0;
     }
+    margin:20px 0 0 0;
 }
 
 
