--- a/Ingenio.PortalWebExterno/Content/sass/pages/_quienesSomos.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_quienesSomos.scss
@@ -52,3 +52,23 @@
 .text-justify {
     font-size: 18px;
 }
+
+.quien_container_contenido {
+    display: flex;
+    flex-direction: row;
+    /*flex-wrap: wrap;*/
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+
+
+    img {
+        width: 100%;
+        height: 400px;
+        object-fit: contain;
+    }
+
+    @media (max-width: 1000px) {
+        flex-direction: column;
+    }
+}
