--- a/Ingenio.PortalWebExterno/Views/Error/PaginaError.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Error/PaginaError.cshtml
@@ -11,14 +11,14 @@
 
                 <p class="text-center">
                     <a href="index.html">
-                        <img src="~/img/logo2.png" alt="Cofinal">
+                        <img src="~/img/LOGO_COFINAL.png" alt="Cofinal">
                     </a>
                 </p>
                 <h3>@ViewBag.Title</h3>
                 <h4 class="text-muted">@ViewBag.Description</h4>
 
                 <p class="buttons">
-                    <a href="@Url.Action("Index","Home")" class="btn btn-template-main"><i class="fa fa-home"></i>Ir a la página de inicio</a>
+                    <a href="@Url.Action("Index","Home")" class="myButtons"><i class="fa fa-home"></i>Ir a la página de inicio</a>
                 </p>
             </div>
 
