--- a/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
@@ -54,7 +54,7 @@
                 <div class="heading">
                     <h2>SOMOS...</h2>
                 </div>
-                <div class="">
+                <div class="quien_container_contenido">
                     <p class="text-justify">
                         Una empresa nariñense de carácter privado, sin ánimo de lucro y de servicio social, fundada el 4 de Julio de 1.964.
                         <br>
@@ -70,50 +70,58 @@
                         <br>
                         Es impulsor del desarrollo socioeconómico del suroccidente Colombiano a través de servicios cooperativos de ahorro y crédito.
                     </p>
-                    <img />
+                    <img class="cumple" src="~/igmSliders/imagenes nuevas/cumpleaños_cofinal_2022.jpeg" alt="Cumpleaños de Cofinal" />
                 </div>
             </div>
             <div class="tab-pane " id="resenaHistorica">
                 <div class="heading">
                     <h2>Reseña Histórica</h2>
                 </div>
-                <p>
-                    En el enigmático y bello sur de Colombia y mas exactamente en la serena y plácida ciudad de Pasto, el 4 de julio de
-                    1964 se hace el reconocimiento de la personería Jurídica a nuestra importante cooperativa hoy llamada COFINAL.<br><br>
+                <div class="quien_container_contenido">
+                    <p class="text-justify">
+                        En el enigmático y bello sur de Colombia y mas exactamente en la serena y plácida ciudad de Pasto, el 4 de julio de
+                        1964 se hace el reconocimiento de la personería Jurídica a nuestra importante cooperativa hoy llamada COFINAL.<br><br>
 
-                    Los años sesenta fueron marcados por grandes y definitivos acontecimientos que vale la pena resaltar: el invento de
-                    la píldora, la aparición de la mini falda y el bikini, la primavera de Praga, el mayo de Paris, el primer viaje del hombre a
-                    la luna, la música sugerente y perenne de los Beatles, la primera visita de un Papa a Colombia y con mucha satisfacción y orgullo,
-                    la fundación de la cooperativa COOEDUCADOR, por iniciativa de 58 docentes de la institución educativa San Juan Bosco, que vieron en
-                    la asociatividad, una verdadera alternativa para colmar las necesidades económicas, sociales, entre otras, de las personas
-                    pertenecientes al sector educativo<br><br>
+                        Los años sesenta fueron marcados por grandes y definitivos acontecimientos que vale la pena resaltar: el invento de
+                        la píldora, la aparición de la mini falda y el bikini, la primavera de Praga, el mayo de Paris, el primer viaje del hombre a
+                        la luna, la música sugerente y perenne de los Beatles, la primera visita de un Papa a Colombia y con mucha satisfacción y orgullo,
+                        la fundación de la cooperativa COOEDUCADOR, por iniciativa de 58 docentes de la institución educativa San Juan Bosco, que vieron en
+                        la asociatividad, una verdadera alternativa para colmar las necesidades económicas, sociales, entre otras, de las personas
+                        pertenecientes al sector educativo<br><br>
 
-                    En el año 1995  se cambia la razón social de Coeducador a lo que hoy conocemos como Cofinal y, abre su vinculo permitiendo así
-                    la vinculación de personas dedicadas a diferentes actividades económicas.<br><br>
+                        En el año 1995  se cambia la razón social de Coeducador a lo que hoy conocemos como Cofinal y, abre su vinculo permitiendo así
+                        la vinculación de personas dedicadas a diferentes actividades económicas.<br><br>
 
-                    Hoy ofrece cobertura con oficinas propias en los departamentos de Nariño, Valle, Cauca y Putumayo, y a nivel nacional hace parte
-                    de la red Visionamos que congrega mas de 120 cooperativas a nivel nacional, en las cuales los asociados de Cofinal pueden realizar
-                    sus transacciones.
-                </p>
+                        Hoy ofrece cobertura con oficinas propias en los departamentos de Nariño, Valle, Cauca y Putumayo, y a nivel nacional hace parte
+                        de la red Visionamos que congrega mas de 120 cooperativas a nivel nacional, en las cuales los asociados de Cofinal pueden realizar
+                        sus transacciones.
+                    </p>
+                    <img src="~/img/Img_Web2/Fotografia_edificio.png" alt="Edificio de Cofinal" />
+                </div>
 
             </div>
             <div class="tab-pane" id="mision">
                 <div class="heading">
                     <h2>Misión Corporativa</h2>
                 </div>
-                <p class="text-justify">
-                    Brindar servicios cooperativos de ahorro y crédito, que generen bienestar a los asociados,sus familias y a la comunidad en general,contribuyendo al desarrollo del país.
-                </p>
+                <div class="quien_container_contenido">
+                    <p class="text-justify">
+                        Brindar servicios cooperativos de ahorro y crédito, que generen bienestar a los asociados,sus familias y a la comunidad en general,contribuyendo al desarrollo del país.
+                    </p>
+                    <img src="~/img/Img_Web2/mision.jpg" alt="Mision de Cofinal" />
+                </div>
 
             </div>
             <div class="tab-pane" id="vision">
                 <div class="heading">
                     <h2>Visión Corporativa  </h2>
                 </div>
-                <p class="text-justify">
-                    En 2024 COFINAL se consolidará como la cooperativa líder en la prestación de servicios financieros y sociales del suroccidente colombiano, ampliando su cobertura a través de la innovación y el fortalecimiento organizacional.
-                </p>
-
+                <div class="quien_container_contenido">
+                    <p class="text-justify">
+                        En 2024 COFINAL se consolidará como la cooperativa líder en la prestación de servicios financieros y sociales del suroccidente colombiano, ampliando su cobertura a través de la innovación y el fortalecimiento organizacional.
+                    </p>
+                    <img src="~/img/Img_Web2/vision.jpg" alt="Vision de Cofinal" />
+                </div>
             </div>
         </div>
     </div>
