--- a/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_nuestasAgencias.scss
@@ -148,7 +148,7 @@ $secondary-color: rgba(236, 28, 36, 0.75);
 }
 .modal_Agencias {
     padding: 0;
-    max-width: 750px;
+    /*max-width: 750px;*/
     box-shadow: 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5), 0px 15px 30px -20px rgba(0, 0, 0, 0.5);
     margin: auto auto;
     border: 0;
