--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -179,105 +179,32 @@
 </section>
 
 <section class="page__Credito">
-    @*<div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/educativo3.jpg">
-            <h2>Credito Educativo</h2>
-            <p>
-                El <strong>CRÉDITO EDUCATIVO</strong> dónde los <strong>asociados</strong> y sus <strong>hijos</strong> podrán lograr el sueño de realizar sus <strong>estudios.</strong>
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/vivienda2.jpg">
-            <h2>Credito Educativo</h2>
-            <p>
-                El <strong>CRÉDITO PARA VIVIENDA</strong> para la adquisición de vivienda nueva o usada, rural o urbana de asociados.
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/CARTERA1.jpg">
-            <h2>Credito Educativo</h2>
-            <p>
-                La <strong>COMPRA DE CARTERA</strong> permite cancelar deudas de otras<strong> entidades financieras</strong> y unificar en <strong>COFINAL</strong>
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/LIBRANZA1.jpg">
-            <h2>Credito Educativo</h2>
-            <p>
-                El <strong>CRÉDITO DE LIBRANZA</strong> es otorgado a <strong>empleados</strong> el cual se <strong>descuenta</strong> mensualmente de tu <strong>nómina.</strong>
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/consumo1.jpg">
-            <h2>Credito Educativo</h2>
-            <p>
-                El <strong>CRÉDITO DE CONSUMO</strong> destinado a satisfacer las necesidades de los asociados en la <strong>adquisición</strong> de
-                <strong>bienes de uso personal.</strong>
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/MICROCRE.png">
-            <h2>Credito Educativo</h2>
-            <p>
-                <strong>MICROCRÉDITO</strong> destinado para asociados cuyas <strong>actividades economicas</strong> sean comerciales,
-                agropecuarias, industriales y de servicios.
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/ROTATIVO1.png">
-            <h2>Credito Educativo</h2>
-            <p>
-                El <strong>CRÉDITO ROTATIVO</strong> es un cupo personal reutilizable, que se liga a la <strong>tarjeta débito,</strong> este permite contar con recursos las <strong>24 horas - 365 días</strong> del año.
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>
-
-        <div class="componente__Credito gBoxShadow">
-            <img class="imagen_credito" src="~/img/LOGOS_CREDITO/cofinagro1.png">
-            <h2>Credito Educativo</h2>
-            <p>
-                Con el <strong>CRÉDITO FINAGRO</strong> puedes disponer de los <strong>recursos suficientes</strong>  para el desarrollo de sus actividades <strong>agropecuarias.</strong>
-            </p>
-            <a href="/Home/ProductosCreditos/#creditoEducativo" class="myButtons">Conoce más</a>
-        </div>*@
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#cuentaCofiahorrito">
             <img class="imagen_ahorro" src="~/img/cofiahorrito.png">
             @*<p>COFIAHORRITO</p>*@
         </a>
     </article>
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#cuentaCofijunior">
             <img class="imagen_ahorro" src="~/img/cofijunior1.png">
             @*<p>COFIJUNIOR</p>*@
         </a>
     </article>
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#cuentaCofidiario">
             <img class="imagen_ahorro" src="~/img/cofidiario.png">
             @*<p>COFIDIARIO</p>*@
         </a>
     </article>
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#cuentaEmpresarial">
             <img class="imagen_ahorro" src="~/img/empresarial.png">
             @*<p>AH. EMPRESARIAL</p>*@
         </a>
     </article>
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#ahorroSemilla">
             <img class="imagen_ahorro" src="~/img/logo_semilla.png">
             @*<p>S. COOPERATIVA</p>*@
         </a>
@@ -289,7 +216,7 @@
         </a>
     </article>
     <article>
-        <a class="tipo_4" href="#">
+        <a class="tipo_4" href="/Home/Productos/#cdat">
             <img class="imagen_ahorro" src="~/img/cdat.png">
             @*<p>CDAT</p>*@
         </a>
@@ -486,7 +413,7 @@
     
 </div>
 <div class="container-fluid" style="margin-bottom: -6px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,32L80,42.7C160,53,320,75,480,112C640,149,800,203,960,213.3C1120,224,1280,192,1360,176L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,32L80,42.7C160,53,320,75,480,112C640,149,800,203,960,213.3C1120,224,1280,192,1360,176L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
 </div>
 
 
