--- a/Ingenio.PortalWebExterno/Views/Home/Productos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Productos.cshtml
@@ -6,10 +6,9 @@
     ViewBag.c = Url.Action("index", "Home/Ahorros");
 }
 
-<section style="background-image:url(/img/recortada.jpg); background-attachment: fixed;  background-size: cover; padding-top:20px; margin-top:-40px; margin-bottom:0px; padding-bottom:40px;">
+<section>
     <div class="container">
         <div class="row">
-
             <div class="col-md-3">
                 <div class="panel panel-default sidebar-menu with-icons" style="background-color: rgba(255, 255, 255, 0.8);">
                     <div class="panel-body">
