--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -26,7 +26,7 @@
 
         &:hover, &:focus {
             text-decoration: none;
-            color: black;
+            /*color: black;*/
         }
     }
 }
