--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Details.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Details.cshtml
@@ -13,7 +13,7 @@
     ViewBag.Title = "¿Cómo solicitar un Crédito?";
 }
 
-<script type="text/javascript">
+@*<script type="text/javascript">
     var _smartsupp = _smartsupp || {};
     _smartsupp.key = 'b7e1cad8ae31b522b9a3b64e60182dc54a8c7acb';
     window.smartsupp || (function (d) {
@@ -22,68 +22,55 @@
         c.type = 'text/javascript'; c.charset = 'utf-8'; c.async = true;
         c.src = 'https://www.smartsuppchat.com/loader.js?'; s.parentNode.insertBefore(c, s);
     })(document);
-</script>
+</script>*@
 
-<section style="background-image:url(/img/Logos/); margin-bottom: 0px; margin-top: -40px;">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-            </div>
-            <div class="container">
-                <h4 style="text-align: center">COOPERATIVA DE AHORRO Y CREDITO NACIONAL</h4>
-            </div>
-            <div class="col-lg-3">
+<section class="big__container__FA">
+    <h4 class="tituleAnimation" style="text-align: center">
+        COOPERATIVA DE AHORRO Y CREDITO NACIONAL
+    </h4>
+    <h4 style="text-align: center">¿Cómo solicitar un Crédito?</h4>
+
+    <section class="container__cards_FA">
+        <div class="card-Form-Personal">
+            <div class="content">
+                <div class="front">
+                    TIPO DE TRABAJO
+                </div>
+                <div class="back">
+                    <div>
+                        <h4>TRABAJADORES ASALARIADOS:</h4>
+                        <ul>
+                            <li> 3 Ultimos desprendibles de pago o fotocopias de las nominas.</li>
+                            <li> Certificado laboral completo (Antiguedad, Tipo contrato, Cargo, Sueldo).</li>
+                            <li> Autorización descuento nomina por libranza.</li>
+
+                        </ul>
+
+                        <h4> TRABAJADORES INDEPENDIENTES:</h4>
+                        <ul>
+                            <li> Formato para trabajador independiente.</li>
+                            <li> Visita comercial.</li>
+
+                        </ul>
+
+                        <h4> PENSIONADOS:</h4>
+                        <ul>
+                            <li> 2 Fotocopias de cédula de ciudadania ampliadas al 150%.</li>
+                            <li> 2 Ultimos desprendibles de pago originales.</li>
+                            <li> 2 Autorizaciones autenticadas descuento para pensionados.</li>
+                        </ul>
+                    </div>
+                    <a href="~/Formatos/FORMATOS AFILIACION/Formulario_de_Afiliacion_Cofinal.pdf"
+                       target="_blank" class="myButtons">FORMULARIO PERSONA NATURAL</a>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-3">
-            </div>
-            <div class="container">
-                <h4 style="text-align: center">¿Cómo solicitar un Crédito?</h4>
-            </div>
-            <div class="col-lg-3">
-            </div>
-        </div>
-
-
-        <div class="container" style="padding-top: 1em;">
-            <div class="panel panel-primary">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><strong>REQUISITOS</strong></h3>
+        <div class="card-Form-Personal">
+            <div class="content">
+                <div class="front">
+                    TIPO DE INGRESO
                 </div>
-                <div class="panel-body">
-                    <h4>TRABAJADORES ASALARIADOS:</h4>
-                    <ul>
-                        <li> 1. 3 Ultimos desprendibles de pago o fotocopias de las nominas.</li>
-                        <li> 2. Certificado laboral completo (Antiguedad, Tipo contrato, Cargo, Sueldo).</li>
-                        <li> 3. Autorización descuento nomina por libranza.</li>
-
-                    </ul>
-
-                    <h4> TRABAJADORES INDEPENDIENTES:</h4>
-                    <ul>
-                        <li> 1. Formato para trabajador independiente.</li>
-                        <li> 2. Visita comercial.</li>
-
-                    </ul>
-
-                    <h4> PENSIONADOS:</h4>
-                    <ul>
-                        <li> 1. 2 Fotocopias de cédula de ciudadania ampliadas al 150%.</li>
-                        <li> 2. 2 Ultimos desprendibles de pago originales.</li>
-                        <li> 3. 2 Autorizaciones autenticadas descuento para pensionados.</li>
-                    </ul>
-
-
-                </div>
-
-            </div>
-
-            <div class="panel panel-success" style="border-color: #E1852C">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><strong>REQUISITOS</strong></h3>
-                </div>
-                <div class="panel-body">
+                <div class="back">
                     <h4> INGRESOS POR ARRENDAMIENTOS:</h4>
                     <ul>
                         <li> 1. Fotocopia contrato de arrendamiento.</li>
@@ -101,16 +88,17 @@
                         <li> 1. Certificación saldos totales a la fecha Certificado de afiliación vehículo a la empresa servicio público.</li>
 
                     </ul>
-
-
+                    <a href="~/Formatos/FORMATOS AFILIACION/Formulario_de_Afiliacion_Cofinal.pdf"
+                       target="_blank" class="myButtons">FORMULARIO PERSONA NATURAL</a>
                 </div>
             </div>
-
-            <div class="panel panel-primary" style="border-color: #da4d4d">
-                <div class="panel-heading">
-                    <h3 class="panel-title"><strong>REQUISITOS</strong></h3>
+        </div>
+        <div class="card-Form-Personal">
+            <div class="content">
+                <div class="front">
+                    Tipo de Linea
                 </div>
-                <div class="panel-body">
+                <div class="back">
                     <h4> LINEA CONSUMO/ CREDITO EDUCATIVO:</h4>
                     <ul>
                         <li> 1. Fotocopia orden de matricula academica.</li>
@@ -129,14 +117,12 @@
                         <li> 5. Recibo impuesto predial, cancelado.</li>
                         <li> 6. Petición por escrito del interesado.</li>
                     </ul>
-
                 </div>
             </div>
-
         </div>
-    </div>
+    </section>
 </section>
 
 <div class="container-fluid" style="margin-bottom: -6px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,32L34.3,69.3C68.6,107,137,181,206,229.3C274.3,277,343,299,411,288C480,277,549,235,617,224C685.7,213,754,235,823,218.7C891.4,203,960,149,1029,154.7C1097.1,160,1166,224,1234,224C1302.9,224,1371,160,1406,128L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,32L34.3,69.3C68.6,107,137,181,206,229.3C274.3,277,343,299,411,288C480,277,549,235,617,224C685.7,213,754,235,823,218.7C891.4,203,960,149,1029,154.7C1097.1,160,1166,224,1234,224C1302.9,224,1371,160,1406,128L1440,96L1440,320L1405.7,320C1371.4,320,1303,320,1234,320C1165.7,320,1097,320,1029,320C960,320,891,320,823,320C754.3,320,686,320,617,320C548.6,320,480,320,411,320C342.9,320,274,320,206,320C137.1,320,69,320,34,320L0,320Z"></path></svg>
 </div>
