--- a/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/CanalesPago.cshtml
@@ -4,15 +4,20 @@
     ViewBag.url = Url.Action("index", "home");
     ViewBag.activo = "CanalesPago";
 }
+
+<!-- Slick libreria para hacer los slider de imagenes -->
+<link rel="stylesheet" type="text/css" href="~/Content/slick/slick/slick.css" />
+<link rel="stylesheet" type="text/css" href="~/Content/slick/slick/slick-theme.css" />
+<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+
 <style>
     .text-justify {
         font-size: 18px;
     }
 
     #heading-breadcrumbs {
-        background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),
-            url(../../img/Img_Web2/background_pagos.jpg) center;
-        padding: 6  0px 0;
+        background: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/background_pagos.jpg) center;
+        padding: 6 0px 0;
         /* margin-bottom: 40px; */
     }
 </style>
@@ -29,7 +34,7 @@
                 recordándote el pago. Para pagar puedes usar el medio de pago que prefieras:
             </p>
         </div>
-        <img src="~/img/Convenios/pagos.png">
+        <img src="~/img/Img_Web2/cards.png">
     </div>
 
     <div class="pagos__main">
@@ -50,7 +55,7 @@
                 <p>
                     This....
                 </p>
-                <button id="app_coopcentral"class="myButtons control_pago">Ingresa</button>
+                <button id="app_coopcentral" class="myButtons control_pago">Ingresa</button>
             </div>
         </div>
         <div class="pagos__items">
@@ -58,7 +63,7 @@
             <div class="pago_opciones">
                 <h3>EFECTY</h3>
                 <p>
-                    This....
+                    Sabías qué puedes realizar retiros,consignaciones y recaudo en más de 8.000 puntos Efecty a nivel nacional.
                 </p>
                 <button id="efecty" class="myButtons control_pago">Ingresa</button>
             </div>
@@ -108,21 +113,37 @@
 
 <dialog class="modal_Agencias" id="dialog_efecty">
     <div class="button close-button" id="c-modal1"><i class="fa fa-solid fa-xmark"></i></div>
-    <div class="container__Modal">
-        <div class="header_modal">
-            <h2>Finagro</h2>
-            <img src="https://caracoltv.brightspotcdn.com/dims4/default/39d8175/2147483647/strip/true/crop/1000x566+0+0/resize/1000x566!/quality/90/?url=http%3A%2F%2Fcaracol-brightspot.s3.amazonaws.com%2Ffb%2F28%2F5d677744438d8427422e73e4102b%2Fpalmira-valle-del-cauca.jpg" />
-        </div>
-        <p>
-            <strong>Dirección: </strong><br>
-            Calle 5ta. No. 03-77<br>
-            <strong>Telefono: </strong><br>
-            Teléfono: 7336300 Extensiones: 200 - 201<br>
-            <strong>Horario de Atencion: </strong>
-            Lunes a Viernes: 8:00 am a 12:00 meridiano – 2:00 pm a 5:00 pm Sábado: 8:00 am a 2:00 pm Jornada Continua
-        </p>
-        <div class="imagen_Google">GOOGLE MAPS</div>
+    hola
+    <div id="Carusel-pagos" class="my-slider-pagos">
+        <img src="~/img/Img_Web2/pagos/Efecty-1.jpg" alt="Alternate Text" />
+        <img src="~/img/Img_Web2/pagos/Efecty-2.jpg" alt="Alternate Text" />
+        <img src="~/img/Img_Web2/pagos/Efecty-3.jpg" alt="Alternate Text" />
+
     </div>
+    <div class="caroosles_de_imagenes container_prin">
+        <div class="wrapper">
+            <div id="Carusel" class="my-slider">
+                <img src="~/img/Img_Web2/pagos/Efecty-1.jpg" alt="Alternate Text" />
+                <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
+            </div>
+        </div>
+    </div>
+    @*<div class="caroosles_de_imagenes container_prin">
+        <div class="wrapper">
+            <div id="Carusel" class="my-slider">
+                <div><img class="imagen-slider" src="~/img/Img_Web2/1.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
+                <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
+            </div>
+        </div>
+        </div>*@
 </dialog>
 
 <dialog class="modal_Agencias" id="dialog_trans">
@@ -144,62 +165,76 @@
     </div>
 </dialog>
 
+<div class="caroosles_de_imagenes container_prin">
+    <div class="wrapper">
+        <div id="Carusel" class="my-slider">
+            <img src="~/img/Img_Web2/pagos/Efecty-1.jpg" alt="Alternate Text" />
+            <div><img class="imagen-slider" src="~/img/Img_Web2/2.jpg"></div>
+            <div><img class="imagen-slider" src="~/img/Img_Web2/3.jpg"></div>
+            <div><img class="imagen-slider" src="~/img/Img_Web2/4.jpg"></div>
+            <div><img class="imagen-slider" src="~/img/Img_Web2/5.jpg"></div>
+            <div><img class="imagen-slider" src="~/img/Img_Web2/6.jpg"></div>
+        </div>
+    </div>
+</div>
+
+
 @*<script>
-    // const body = document.querySelector("body");
-    // console.log(body);
+        // const body = document.querySelector("body");
+        // console.log(body);
 
-    const convenios = document.querySelectorAll(".convenio__items");
-    const convenios_controls = document.querySelectorAll(".convenio__boton");
+        const convenios = document.querySelectorAll(".convenio__items");
+        const convenios_controls = document.querySelectorAll(".convenio__boton");
 
-    document.querySelectorAll(".convenio__boton").forEach((item) => {
-        // console.log(convenios);
-        item.addEventListener("click", () => {
-            convenios_controls.forEach(a => a.classList.remove('control_con_active'));
-            item.classList.add('control_con_active')
-            console.log(`Esto: ${item.classList}`)
-            convenios.forEach(convenio => convenio.classList.add('con_desactive'));
-            document.querySelectorAll(".convenio__items").forEach((convenio) => {
-                // console.log(item.id)
-                if (item.id == "todos") {
-                    //console.log("entro");
-                    convenios.forEach(convenio => convenio.classList.remove('con_desactive'));
-                } else {
-                    // console.log(`Nuevo:  ${item.id}`);
-                    const cla = `${item.id}_item`
-                    // console.log(cla)
-                    const clases_convenio = convenio.classList.value;
-                    // console.log(cla,clases_convenio)
-                    if (clases_convenio.match(cla)) {
-                        convenio.classList.remove('con_desactive')
-                        console.log(convenio.classList.value)
-                    };
-                }
-                // console.log(result);
-            })
-            //   const stringModal = `dialog_${item.id}`;
-            //   // console.log(`#${stringModal}`);
-            //   const modal = document.querySelector(`#${stringModal}`)
-            //   console.log(event)
-            //   modal.showModal();
-            //   body.style.overflow = "hidden";
-            //   document.querySelectorAll(".close-button").forEach((item) => {
-            //     item.addEventListener("click", (event) => {
-            //       modal.close()
-            //       body.style.overflow = "auto";
-            //       // console.log(item.classList.contains("close-button"));
-            //     });
-            //     window.onclick = function (event) {
-            //     // console.log(event.target);
-            //     console.log(modal);
-            //     if (event.target == modal) {
-            //       modal.close();
-            //       body.style.overflow = "auto";
-            //     }
-            //   };
-            //   });
+        document.querySelectorAll(".convenio__boton").forEach((item) => {
+            // console.log(convenios);
+            item.addEventListener("click", () => {
+                convenios_controls.forEach(a => a.classList.remove('control_con_active'));
+                item.classList.add('control_con_active')
+                console.log(`Esto: ${item.classList}`)
+                convenios.forEach(convenio => convenio.classList.add('con_desactive'));
+                document.querySelectorAll(".convenio__items").forEach((convenio) => {
+                    // console.log(item.id)
+                    if (item.id == "todos") {
+                        //console.log("entro");
+                        convenios.forEach(convenio => convenio.classList.remove('con_desactive'));
+                    } else {
+                        // console.log(`Nuevo:  ${item.id}`);
+                        const cla = `${item.id}_item`
+                        // console.log(cla)
+                        const clases_convenio = convenio.classList.value;
+                        // console.log(cla,clases_convenio)
+                        if (clases_convenio.match(cla)) {
+                            convenio.classList.remove('con_desactive')
+                            console.log(convenio.classList.value)
+                        };
+                    }
+                    // console.log(result);
+                })
+                //   const stringModal = `dialog_${item.id}`;
+                //   // console.log(`#${stringModal}`);
+                //   const modal = document.querySelector(`#${stringModal}`)
+                //   console.log(event)
+                //   modal.showModal();
+                //   body.style.overflow = "hidden";
+                //   document.querySelectorAll(".close-button").forEach((item) => {
+                //     item.addEventListener("click", (event) => {
+                //       modal.close()
+                //       body.style.overflow = "auto";
+                //       // console.log(item.classList.contains("close-button"));
+                //     });
+                //     window.onclick = function (event) {
+                //     // console.log(event.target);
+                //     console.log(modal);
+                //     if (event.target == modal) {
+                //       modal.close();
+                //       body.style.overflow = "auto";
+                //     }
+                //   };
+                //   });
+            });
         });
-    });
-</script>*@
+    </script>*@
 
 <script>
     const body = document.querySelector("body");
@@ -232,5 +267,92 @@
             });
         });
     });
+</script>
+
+<script type="text/javascript" src="~/Content/slick/slick/slick.min.js"></script>
+<script type="text/javascript">
+    // Control de slider
+    $('.slick-carousel').slick({
+        infinite: true,
+        slidesToShow: 3, // Shows a three slides at a time
+        slidesToScroll: 1, // When you click an arrow, it scrolls 1 slide at a time
+        arrows: true, // Adds arrows to sides of slider
+        dots: true // Adds the dots on the bottom
+    });
+    setTimeout(function () {
+        $(document).ready(function () {
+            //$("#Carusel").attr("style", "display: block");
+            $('.my-slider-pagos').slick({
+                // Propiedades del Slider
+                slidesToShow: 1,
+                slidesToScroll: 3,
+                arrows: true,
+                centermode: true,
+                dots: true,
+                speed: 500,
+                infinite: true,
+                autoplaySpeed: 5000,
+                //responsive: [
+                //    {
+                //        breakpoint: 1400,
+                //        settings: {
+                //            slidesToShow: 3,
+                //        }
+                //    },
+                //    {
+                //        breakpoint: 900,
+                //        settings: {
+                //            slidesToShow: 2,
+                //        }
+                //    },
+                //    {
+                //        breakpoint: 750,
+                //        settings: {
+                //            slidesToShow: 1,
+                //        }
+                //    },
+                //]
+            });
+        })
+    }, 100);
+
+    setTimeout(function () {
+        $(document).ready(function () {
+            //$("#Carusel").attr("style", "display: block");
+            $('.my-slider').slick({
+                // Propiedades del Slider
+                slidesToShow: 2,
+                slidesToScroll: 1,
+                arrows: true,
+                centermode: true,
+                dots: true,
+                speed: 500,
+                infinite: true,
+                autoplaySpeed: 5000,
+                responsive: [
+                    {
+                        breakpoint: 1400,
+                        settings: {
+                            slidesToShow: 3,
+                        }
+                    },
+                    {
+                        breakpoint: 900,
+                        settings: {
+                            slidesToShow: 2,
+                        }
+                    },
+                    {
+                        breakpoint: 750,
+                        settings: {
+                            slidesToShow: 1,
+                        }
+                    },
+                ]
+            });
+        })
+    }, 100);
+
+
 </script>
 
