--- a/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/QuienesSomos.cshtml
@@ -177,7 +177,7 @@
     </div>
 </section>
 <div class="container-fluid" style="margin-bottom: -6px;">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ff5500" fill-opacity="1" d="M0,32L120,74.7C240,117,480,203,720,202.7C960,203,1200,117,1320,74.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="rgba(252,132,4,0.9)" fill-opacity="1" d="M0,32L120,74.7C240,117,480,203,720,202.7C960,203,1200,117,1320,74.7L1440,32L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg>
 </div>
 
 <style>
