Cambios de Banners

--- a/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/FormatosAC/Index.cshtml
@@ -26,6 +26,9 @@
         /* margin-bottom: 40px; */
     }
 </style>
+<section class="imagen_directorio">
+    <img src="~/img/Img_Web2/Formulario.png" alt="Numero principal: 7366087" />
+</section>
 <section class="big__container__FA">
     <h4 class="tituleAnimation" style="text-align: center">Afíliese y disfrute de nuestro completo portafolio de productos, servicios y convenios.</h4>
 
