--- a/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/ConceptosDeInteres.cshtml
@@ -49,7 +49,7 @@
         <div class="tab-content" style="background-color: rgba(255, 255, 255, 0.8); font-size: 18px; ">
             <div class="tab-pane active" id="valoresCoo">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <div class="heading">
                             <h4>Responsabilidad</h4>
                         </div>
@@ -81,12 +81,12 @@
                             La cooperativa tiene la responsabilidad de velar por el interés colectivo de sus miembros. Es la mera causa y consecuencia de auto ayuda y ayuda mutua, dos de los conceptos fundamentales que son al corazón de la filosofía cooperativa.
                         </p>
                     </div>
-                    <img src="~/img/Img_Web2/valores.jpg" alt="valores" />
+                    <div class="parte-img"><img src="~/img/Img_Web2/valores.jpg" alt="valores" /></div>
                 </div>
             </div>
             <div class="tab-pane" id="principios">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <div class="heading">
                             <h4>Adhesión libre y voluntaria</h4>
                         </div>
@@ -158,7 +158,7 @@
                             <li>Entrega de equipos de información.</li>
                         </ul>
                     </div>
-                    <div>
+                    <div class="parte-img principio">
                         <img src="~/img/Img_Web2/principios.jpg" alt="Alternate Text" />
                         <img src="~/img/Img_Web2/principios2.jpg" alt="Alternate Text" />
                     </div>
@@ -168,7 +168,7 @@
 
             <div class="tab-pane" id="gobierno">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <div class="heading">
                             <h4>Órganos de gobierno y control</h4>
                         </div>
@@ -179,13 +179,13 @@
                             <li>Gerencia general.</li>
                         </ul>
                     </div>
-                    <img src="~/img/Img_Web2/principios.jpg" alt="Alternate Text" />
+                    <div class="parte-img"><img src="~/img/Img_Web2/principios.jpg" alt="Alternate Text" /></div>
                 </div>
             </div>
 
             <div class="tab-pane" id="politica">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <p id="pp" style="text-align:justify">
                             El presente código es el reflejo de que Cofinal® está comprometida en adoptar un marco de principios y valores de
                             autorregulación, con los que persigue orientar la conducta de sus organismos internos de administración y vigilancia,
@@ -193,32 +193,32 @@
                         </p>
                         <a href="~/Formatos/Formato politica/Codigo_Etica_y_Conducta.pdf" download>Descargar Archivo: Codigo de etica y conducta.pdf</a>
                     </div>
-                    <img src="~/img/Img_Web2/principios.jpg" alt="Alternate Text" />
+                    <div class="parte-img"><img src="~/img/Img_Web2/principios.jpg" alt="Alternate Text" /></div>
                 </div>
             </div>
 
             <div class="tab-pane" id="estatutos">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <p id="pp" style="text-align:justify">
                             Los estatutos son las reglas de juego que acuerdan los socios y define el funcionamiento general de la Cooperativa.
                         </p>
                         <a href="~/Formatos/Formato estatutos/Estatutos.pdf" download>Descargar Archivo: Estatutos.pdf</a>
                     </div>
-                    <img src="~/img/Img_Web2/estatutos.jpg" alt="Alternate Text" />
+                    <div class="parte-img"><img src="~/img/Img_Web2/estatutos.jpg" alt="Alternate Text" /></div>
                 </div>
             </div>
 
             <div class="tab-pane" id="r_credito">
                 <div class="quien_container_contenido">
-                    <div>
+                    <div class="parte-texto">
                         <p id="pp" style="text-align:justify">
                             El Reglamento de Crédito contiene las condiciones generales aplicables a los actos cooperativos celebrados
                             entre Cofinal® y sus asociados:
                         </p>
                         <a href="~/Formatos/Formatos creditos/1.reg_credito.pdf" download>Descargar Archivo: Reglamento de crédito.pdf</a>
                     </div>
-                    <img src="~/img/Img_Web2/estatutos.jpg" alt="Alternate Text" />
+                    <div class="parte-img"><img src="~/img/Img_Web2/estatutos.jpg" alt="Alternate Text" /></div>
                 </div>
             </div>
         </div>
