--- a/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Creditos.cshtml
@@ -148,6 +148,9 @@
     }
 </script>
 
+<section class="imagen_directorio">
+    <img src="~/img/Img_Web2/Creditos.png" alt="Numero principal: 7366087" />
+</section>
 
 
 <!--seccion de nota-->
