--- a/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Index.cshtml
@@ -245,11 +245,11 @@
                         <h3 class="tituleAnimation">¿En que te podemos ayudar?</h3>
                         <div class="nuestros__Servicios">
                             <a href="~/Home/ahorros" class="tartjeta__servicios animacion_arriba">
-                                <img src="~/img/Img_Web2/icono-ahorro.png" />
+                                <img src="~/img/Img_Web2/icono-ahorro.png" style="padding:10px 0px;"/>
                                 <p>Ahorro</p>
                             </a>
                             <a href="~/Home/Creditos" class="tartjeta__servicios animacion_arriba">
-                                <img src="~/img/Img_Web2/icono-credito.png" />
+                                <img src="~/img/Img_Web2/icono-credito.png" style="padding:10px 0px;"/>
                                 <p>Crédito</p>
                             </a>
                             <a href="~/FormatosAC/Index" class="tartjeta__servicios animacion_arriba">
