--- a/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Multiportal.cshtml
@@ -74,7 +74,9 @@
 @*<img src="~/Imagenes/multiportal1.jpg" style="width:1300px; height: 300px;" alt="Multiportal" class="img-responsive  center-block">*@
 @*<div class="parallaxbox" id="pb0" style="background-image: url('//img/fondos/multiportal1.jpg');"> </div>*@
 <!-- contenido-->
-
+<section class="imagen_directorio">
+    <img src="~/img/Img_Web2/portal.png" alt="Numero principal: 7366087" />
+</section>
 <section id="aso" class="bar background-white no-mb" style="display:none;">
     <div class="container">
         <div class="row">
