--- a/Ingenio.PortalWebExterno/Content/sass/main_style.css
+++ b/Ingenio.PortalWebExterno/Content/sass/main_style.css
@@ -573,8 +573,8 @@ content-video > myButtons:hover {
 .icons > .tarjetas-Centradas > .icentrado {
   font-size: 3.5em;
   color: #fb7601;
-  width: 11.5rem;
-  height: 11.5rem;
+  /*width: 11.5rem;*/
+  /*height: 11.5rem;*/
   /*  border: 3px solid #fb7601;*/
   border-radius: 50%;
   padding: 20px;
@@ -1648,10 +1648,19 @@ i {
   justify-content: center;
   align-items: center;
   gap: 30px; }
-  .quien_container_contenido img {
-    width: 100%;
-    height: 400px;
-    object-fit: contain; }
+  .quien_container_contenido .parte-texto {
+    flex: 0 1 50%; }
+  .quien_container_contenido .parte-img {
+    flex: 0 1 50%; }
+    .quien_container_contenido .parte-img.principio {
+      display: flex;
+      flex-direction: column;
+      /*align-items:center;*/
+      /*justify-content:space-evenly;*/ }
+    .quien_container_contenido .parte-img img {
+      width: 100%;
+      height: 430px;
+      object-fit: contain; }
   @media (max-width: 1000px) {
     .quien_container_contenido {
       flex-direction: column; } }
@@ -1788,6 +1797,48 @@ i {
       font-size: 1.5rem;
       font-weight: 700;
       text-align: center; }
+
+.content-table {
+  padding-top: 40px;
+  border-collapse: collapse;
+  margin: 40px 0 0 0;
+  font-size: 0.9em;
+  min-width: 375px;
+  border-radius: 5px 5px 0 0;
+  overflow: hidden;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); }
+  .content-table thead tr {
+    background-color: rgba(252, 132, 4, 0.9);
+    color: #ffffff;
+    text-align: left;
+    font-weight: bold; }
+  .content-table th, .content-table td {
+    padding: 12px 15px; }
+    .content-table th a, .content-table td a {
+      color: black; }
+      .content-table th a:focus, .content-table td a:focus {
+        outline: none; }
+  .content-table tbody tr {
+    border-bottom: 1px solid #dddddd; }
+    .content-table tbody tr:hover {
+      /*font-weight: bold;*/
+      color: rgba(252, 132, 4, 0.9); }
+    .content-table tbody tr:nth-of-type(even) {
+      background-color: #f3f3f3; }
+    .content-table tbody tr:last-of-type {
+      border-bottom: 2px solid rgba(252, 132, 4, 0.9); }
+
+.imagen_directorio {
+  max-width: 1400px;
+  margin: auto;
+  display: flex;
+  position: relative; }
+  .imagen_directorio img {
+    margin: 10px;
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15); }
 
 .actualizacionDatos {
   max-width: 1000px;
