--- a/Ingenio.PortalWebExterno/Content/sass/pages/_directorio.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_directorio.scss
@@ -57,3 +57,67 @@
         }
     }
 }
+
+.content-table {
+    padding-top:40px;
+    border-collapse: collapse;
+    margin: 40px 0 0 0;
+    font-size: 0.9em;
+    min-width: 375px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+
+    thead tr {
+        background-color: $primary-color;
+        color: #ffffff;
+        text-align: left;
+        font-weight: bold;
+    }
+
+    th, td {
+        padding: 12px 15px;
+
+        a{
+            color:black;
+
+            &:focus{
+                outline:none;
+            }
+        }
+    }
+
+    tbody {
+        tr {
+            border-bottom: 1px solid #dddddd;
+
+            &:hover {
+                /*font-weight: bold;*/
+                color: $primary-color;
+            }
+
+            &:nth-of-type(even) {
+                background-color: #f3f3f3;
+            }
+
+            &:last-of-type {
+                border-bottom: 2px solid $primary-color;
+            }
+        }
+    }
+}
+
+.imagen_directorio {
+    max-width: 1400px;
+    margin: auto;
+    display: flex;
+    position: relative;
+
+    img {
+        margin:10px;
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+        box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+    }
+}
