--- a/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_home.scss
@@ -153,7 +153,6 @@ content-video > myButtons:hover {
         transition: all 0.2s ease-in-out;
         gap: 20px;
         border-radius: 5px;
-
         &:hover {
             transform: translateY(-5px);
             box-shadow: 0px 15px 30px -20px rgba(0, 0, 0, 0.5);
@@ -449,8 +448,8 @@ content-video > myButtons:hover {
 .icons > .tarjetas-Centradas > .icentrado {
     font-size: 3.5em;
     color: #fb7601;
-    width: 11.5rem;
-    height: 11.5rem;
+    /*width: 11.5rem;*/
+    /*height: 11.5rem;*/
     /*  border: 3px solid #fb7601;*/
     border-radius: 50%;
     padding: 20px;
