--- a/Ingenio.PortalWebExterno/Content/sass/pages/_quienesSomos.scss
+++ b/Ingenio.PortalWebExterno/Content/sass/pages/_quienesSomos.scss
@@ -62,11 +62,29 @@
     gap: 30px;
 
 
-    img {
-        width: 100%;
-        height: 400px;
-        object-fit: contain;
+    .parte-texto {
+        flex: 0 1 50%;
     }
+
+    .parte-img {
+
+        flex: 0 1 50%;
+
+        &.principio {
+            display: flex;
+            flex-direction: column;
+            /*align-items:center;*/
+            /*justify-content:space-evenly;*/
+        }
+
+        img {
+            width: 100%;
+            height: 430px;
+            object-fit: contain;
+        }
+    }
+
+
 
     @media (max-width: 1000px) {
         flex-direction: column;
