--- a/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Account/Login.cshtml
@@ -9,7 +9,10 @@
 }
 <style>
     #content {
-        background: rgba(252,132,4,0.2);
+        background-image: linear-gradient( to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url(../../img/Img_Web2/fondo_login.jpg);
+        /*background-repeat: no-repeat;*/
+        background-size: cover;
+        padding:40px;
     }
 
     .form-control {
