--- a/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/Ahorros.cshtml
@@ -165,10 +165,13 @@
 </div>*@
 
 <!--nota-->
+<section class="imagen_directorio">
+    <img src="~/img/Img_Web2/ahorro.png" alt="Numero principal: 7366087" />
+</section>
 
 <section id="textura">
     <div class="container">
-        <p class="text-justify" style="color:#eeeeee; font-size:20px;">
+        <p class="text-justify" style="color:#eeeeee; font-size:20px;margin-top:20px;">
             Teniendo en cuenta las condiciones y necesidades de la población,
             <strong>COFINAL®</strong> ha diseñado un amplio portafolio de productos de ahorros, con el propósito de sembrar
             y cultivar en sus asociados, el buen hábito del ahorro, estimulándolo con atractivas tasas de interés,
