--- a/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
+++ b/Ingenio.PortalWebExterno/Views/Home/NuestrasAgencias.cshtml
@@ -50,6 +50,9 @@
     </div>
 </div>-->
 <!-- contenido-->
+<section class="imagen_directorio">
+    <img src="~/img/Img_Web2/agencias.png" alt="Numero principal: 7366087" />
+</section>
 <section class="contenido">
     <div class="container container__nuestras_Agencias" style="background-color: rgba(255, 255, 255, 0.8); ">
         @*<ul class="nav nav-tabs" style="background-color: #ffffff">
